Text edits for section 2.1.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -11,18 +11,15 @@
   musical sequence in jazz!” on the cover.}
 
 \fntext{tf-2}{%
-  Despite our analysis in the previous chapter of “All the
-  Things You Are” as taking place in a diatonic space, the ubiquity of \tfo\
-  progressions means that many jazz musicians are apt to hear strings of \tf{}s,
-  even when there is a clear diatonic pattern. Though some jazz musicians
-  describe “Autumn Leaves” as a diatonic cycle, many may also describe it as a
-  \tfo\ in \Bflat\ followed by a \tfo\ in the relative minor, connected by a
-  major seventh chord.}
+  Our diatonic analysis of “All the Things You Are” in the previous chapter
+  notwithstanding, the ubiquity of \tfo\ progressions means that many jazz
+  musicians are apt to hear  the progression as successions of \tf{}s, even in
+  cases where a diatonic pattern may be present.}
 
 \fntext{tf-2a}{%
-  The triangle on the C chord in this figure indicates a major seventh. We use
-  the triangle rather than “\h{maj7}” or “\h{M7}” to save space and reduce
-  clutter in the graphical representations.}
+  The triangle on the C chord in this figure indicates a major seventh. The
+  triangle (instead of ``\h{maj7}'' or ``\h{M7}'') is intended to save space and
+  reduce clutter in the graphical representations.}
 
 \fntext{tf-3}{%
   Lewin’s definition of a transformation network is in
@@ -30,11 +27,16 @@
   \cite[110--16]{rings:2011}.}
 
 \fntext{tf-4}{%
-  \headlesscite[Definition 1.3.1 (3)]{lewin:gmit}.}
+  \headlesscite[Definitions 9.3.1 (196) and 1.3.1 (3)]{lewin:gmit}.}
 
 \fntext{tf-5}{%
   \headlesscite[195--96 and throughout]{lewin:gmit}. See also
   \cite[6--8]{hook:2007}.}
+
+\fntext{tf-5a}{%
+  In fact, many jazz piano texts begin with ``three-note'' or ``shell''
+  voicings, consisting only of chordal roots, thirds, and sevenths; see, for
+  example \cite[17--22]{levine:piano}; and \cite[211--12]{berklee:harmony}.}
 
 \fntext{tf-6}{%
   Here and throughout this chapter, pitch classes are represented as mod-12
@@ -46,7 +48,7 @@
 
 \fntext{tf-7}{%
   Hook himself makes this clear, noting that for any two sets S and
-  T it is possible to define a single-type transformation in the set
+  T it is possible to define a single-type transformation in the union set
   S $\cup$ T. He also notes that even when a single-type
   transformation is possible, ``the cross-type approach is often
   simpler and more natural,'' which certainly seems to be the case
@@ -245,5 +247,5 @@
 
 %%% Local Variables: %%%
 %%% mode: LaTeX %%%
-%%% TeX-master: "diss" %%%
+%%% TeX-master: "../diss" %%%
 %%% End: %%%
