Text edits for section 2.2.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -99,17 +99,11 @@
 \fntext{tft-1}{%
   The tritone substitution has been discussed extensively in the literature,
   so we will not discuss it at any length here. See, for example,
-  \cite{biamonte:2008}; \cite{martin:1988}; and \cite{tymoczko:2011}.}
+  \cite{biamonte:2008}; \cite[11]{martin:1988}; and \cite[360--65]{tymoczko:2011}.}
 
 \fntext{tft-2a}{%
   A similar diagram can be found in \cite[5]{pohlert:bh}, and can be seen
   implicitly in Figure 1-1 of \cite{martin:1988}.}
-
-% xxx citations here!
-\fntext{tft-2}{%
-  Möbius strips have a surprising number of applications in music theory. See,
-  for example, % xxx citations needed!
-}
 
 \fntext{tft-2b}{%
   Determining the structure of the underlying transformation graph of this
@@ -129,14 +123,14 @@
   is defined here only as a transformation from I\tsup{7} chords to
   ii\tsup{7} chords, but of course the triadic \textsc{slide} is an involution
   (two successive applications of \textsc{slide} to any triad will result in the
-  starting triad). We can define \slideS so that it acts in a similar way, but
+  same triad). We can define \slideS so that it acts in a similar way, but
   we will delay that possibility until Section \ref{}.}
 
 % xxx look up this faure passage
 \fntext{tft-4}{%
   The \slideS\ transformation can be found in a chromatic sequence in the
-  second movement of the Fauré string quartet. (I am thankful to Julian Hook
-  for pointing this example out to me.)}
+  second movement of the Fauré string quartet, mm.~36--39. (I am thankful to
+  Julian Hook for pointing this example out to me.)}
 
 \fntext{tft-5}{%
   % xxx citation of "Bird Blues"
@@ -144,11 +138,11 @@
   calls it the ``descending blues'' (\headlesscite[228]{levine:1995}). Like many
   sets of Parker changes, several different versions exist; the changes here
   represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
-  vi chord) instead of \h{FM7} in m.~10; Levine's \emph{Jazz Theory Book} gives
+  vi chord) instead of \h{FM7} in m.~11; Levine's \emph{Jazz Theory Book} gives
   \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3;
   and the \emph{Charlie Parker Omnibook} omits both \h{D7} chords (the first in
   the second half of m.~7, the second in m.~11) and the tonic in m.~11 is an
-  F7.\nocite{aebersold:omnibook} Most of these differences are minor, and over
+  \h{F7}.\nocite{aebersold:omnibook} Most of these differences are minor, and over
   the course of a recorded performance the changes might vary among all of these
   versions. Other compositions that contain this progression include Parker's
   own ``Confirmation,'' Sonny Stitt's ``Jack Spratt,'' and Toots Thielemans's
@@ -157,9 +151,9 @@
 \fntext{tft-6}{%
   The major-minor seventh chord as a stable chord is characteristic of the
   blues; see, for example, \cite[158--59 and throughout]{mcgowan:2011}. This
-  fact is somewhat obscured in \tf space, since major-minor sevenths appear
-  in the space only as V\tsup{7} chords; we will return to this limitation
-  later in this chapter.}
+  fact is somewhat obscured in \tf space, since major-minor sevenths appear in
+  the space only as V\tsup{7} chords; we will return to this limitation
+  later in Section \ref{sec:other-kinds-tonic}.}
 
 \fntext{tft-7}{%
   At least, impossible if we want to stay within the three sets we are
