Text edits for section 2.3.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -175,7 +175,7 @@
 %{{{ Extensions
 
 \fntext{tfe-1}{%
-  The extensions used in the dominant chord in a minor \tf is quite flexible:
+  The extensions used for the dominant chord in a minor \tf is quite flexible:
   Aebersold's \emph{II--V\tsup{7}--I Progression} gives the quality as \h{7s9},
   but Mark Levine usually gives the chord symbol simply as ``alt.'' Levine
   includes the minor \tf in the category of ``melodic minor scale harmony,'' and
@@ -194,13 +194,22 @@
   The name of the transformation \textsc{ResI} is inspired by Steven Rings's use of
   the transformation ``ResC'' in the first chapter of \headlesscite[25-27]{rings:2011}.}
 
+\fntext{tfe-2a}{%
+  In practice, \textsc{ResI} will almost always be a transformation that
+  moves the root of a V\tsup{7} down a perfect fifth. In theory, however,
+  there is no limitation on the definition of \textsc{ResI}. It is possible,
+  for example, to construct a space where tritone substitutes are normative by
+  defining \textsc{ResI} to be equal to \tft; in this case, the gray arrows in
+  Figure \ref{tfe:generic-space} would represent the transformation
+  \textsc{7th} $\odot$ $T_6$.
+}
+
 \fntext{tfe-3}{%
   In fact, we could make similar statements for all of the sets developed in
-  this chapter: \Smin would then become ``the set of minor-minor seventh
-  chords acting as \sd2, \sd4, and \sd1 in some key'' (loosely speaking; the
-  necessary mathematics are easy enough to provide). In most cases, however,
-  this level of precision is unnecessary, since the quality of the chord
-  uniquely identifies its function.}
+  this chapter: \Smin would then become (speaking loosely) ``the set of
+  minor-minor seventh chords acting as \sd2, \sd4, and \sd1 in some key.'' In
+  most cases, however, this level of precision is unnecessary, since the quality
+  of the chord uniquely identifies its function.}
 
 \fntext{tfe-4}{%
   For more on diatonic systems generally, see \cite{cloughmyerson:1985}.}
