Final(ish) text edits for chapter 2.
Also includes changes to avoid a bunch of \tsup{7}s, since the 7 was an
lowercase number and looked weird.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -58,8 +58,8 @@
   It would be possible to form a \gis\ by considering all ordered triples as
   the group, as suggested above. While this is possible, defining an interval
   function in this group is much more difficult: such a function would need to
-  account for the 36 ordered triples in \tf\ space (ii\tsup{7}, V\tsup{7}, and
-  I\tsup{7} chords) as well as the many more (1692) that are not included in the
+  account for the 36 ordered triples in \tf\ space (\ii, \V, and
+  \I chords) as well as the many more (1692) that are not included in the
   space. Such a function is conceivable, but would not in any case reflect the
   musical realities \tf\ space is interested in portraying.}
 
@@ -68,13 +68,13 @@
   distance metric is somehow not sufficient, we can instead rely on the
   standard way of measuring distance in a directed graph: by counting the
   number of edges in the shortest path between two chords. The distance from
-  ii\tsup{7} of C to V\tsup{7} of \Eflat\ is then 4: ii to V in C (1 edge),
+  \ii of C to \V of \Eflat\ is then 4: ii to V in C (1 edge),
   then 3 $T_5$s to V of \Eflat.}
 
 
 \fntext{tf-10}{%
   These changes are taken from \emph{The Real Book}, and reflect what is
-  played on the album \emph{Cornbread}.\nocite{morgan:cornbread} In this figure,
+  played on the \emph{Cornbread} recording.\nocite{morgan:cornbread} In this figure,
   the circle indicates the tonic, while the numbers on the labels indicate the
   order of transformations.}
 
@@ -120,8 +120,8 @@
   The \textsc{slide} transformation was introduced by David Lewin
   (\headlesscite[178]{lewin:gmit}), but has since become a part of of the
   standard set of Neo-Riemannian transformations. \slideS
-  is defined here only as a transformation from I\tsup{7} chords to
-  ii\tsup{7} chords, but of course the triadic \textsc{slide} is an involution
+  is defined here only as a transformation from \I chords to
+  \ii chords, but of course the triadic \textsc{slide} is an involution
   (two successive applications of \textsc{slide} to any triad will result in the
   same triad). We can define \slideS so that it acts in a similar way, but
   we will delay that possibility until Section \ref{}.}
@@ -152,14 +152,14 @@
   The major-minor seventh chord as a stable chord is characteristic of the
   blues; see, for example, \cite[158--59 and throughout]{mcgowan:2011}. This
   fact is somewhat obscured in \tf space, since major-minor sevenths appear in
-  the space only as V\tsup{7} chords; we will return to this limitation
+  the space only as \V chords; we will return to this limitation
   later in Section \ref{sec:other-kinds-tonic}.}
 
 \fntext{tft-7}{%
   At least, impossible if we want to stay within the three sets we are
   studying in this chapter. Like the other transformations we have defined, EC
   is an admissible transformation on the set of all mod-12 ordered triples: if
-  we begin with a \h{Dm7} chord, EC gives us $(2, 5, 0) \ECarrow\ (7, 10, 4)$,
+  we begin with a \h{Dm7} chord, $(2, 5, 0)$, EC gives us the triple $(7, 10, 4)$,
   which of course is not a major, minor, or dominant seventh chord.}
 
 \fntext{tft-8}{%
@@ -176,7 +176,7 @@
 
 \fntext{tfe-1}{%
   The extensions used for the dominant chord in a minor \tf is quite flexible:
-  Aebersold's \emph{II--V\tsup{7}--I Progression} gives the quality as \h{7s9},
+  Aebersold's \emph{II--\V--I Progression} gives the quality as \h{7s9},
   but Mark Levine usually gives the chord symbol simply as ``alt.'' Levine
   includes the minor \tf in the category of ``melodic minor scale harmony,'' and
   ``alt.'' is short for the ``altered scale'' (the seventh mode of melodic
@@ -196,7 +196,7 @@
 
 \fntext{tfe-2a}{%
   In practice, \textsc{ResI} will almost always be a transformation that
-  moves the root of a V\tsup{7} down a perfect fifth. In theory, however,
+  moves the root of a \V down a perfect fifth. In theory, however,
   there is no limitation on the definition of \textsc{ResI}. It is possible,
   for example, to construct a space where tritone substitutes are normative by
   defining \textsc{ResI} to be equal to \tft; in this case, the gray arrows in
@@ -222,8 +222,8 @@
 
 \fntext{tfe-5a}{%
   This figure has been skewed somewhat to conserve space on the page. If it
-  were drawn in a manner parallel with standard \tf space, a ii\tsup{7} chord
-  would be directly below the I\tsup{7} chord with the same root. As is the case
+  were drawn in a manner parallel with standard \tf space, a \ii chord
+  would be directly below the \I chord with the same root. As is the case
   throughout this study, the particular visual representation chosen for a given
   space does not affect the abstract structure of the space itself. }
 
@@ -233,7 +233,7 @@
   the root of a chord $k$ steps inside a particular diatonic collection.
   There, we were interested in a particular 7-element set of chords (with
   their attendant qualities); here, the root is still transposed in a
-  particular diatonic collection, but the resulting chord is still a major
+  particular diatonic collection, but the resulting chord remains a major
   seventh chord.}
 
 \fntext{tfe-6}{%
@@ -241,7 +241,7 @@
   and \h{BbM7} never appear in the music, while \h{DbM7} does. Thus the
   chord qualities strongly suggest \h{Ab} major: I and IV (\Aflat\ and \Dflat)
   both appear as major sevenths, while ii and iii (\Bflat\ and C) appear only
-  as minor seventh chords (unstable ii\tsup{7} chords).}
+  as minor seventh chords (unstable \ii chords).}
 
 \fntext{tfe-7}{%
   Path consistency is described in \cite[25--28]{hook:2007}.}
