--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -251,6 +251,10 @@
 \newcommand{\ivls}{\abbrev{IVLS}\xspace}
 \newcommand{\gis}{\abbrev{GIS}\xspace}
 \newcommand{\strans}{\abbrev{STRANS}\xspace}
+\newcommand{\ii}{\mbox{ii\ensuremath{^7}}\xspace}
+\newcommand{\V}{\mbox{V\ensuremath{^7}}\xspace}
+\newcommand{\I}{\mbox{I\ensuremath{^7}}\xspace}
+
 
 % uppercase small caps
 \newcommand{\abbrev}[1]{{\abbrevSC #1}}
