Minor punctuation change in footnote.

--- a/footnotes/ch2-notes.tex
+++ b/footnotes/ch2-notes.tex
@@ -133,9 +133,8 @@
   Julian Hook for pointing this example out to me.)}
 
 \fntext{tft-5}{%
-  % xxx citation of "Bird Blues"
   This progression is often known as the ``Bird Blues,'' though Mark Levine
-  calls it the ``descending blues'' (\headlesscite[228]{levine:1995}). Like many
+  calls it the ``descending blues'' in \headlesscite[228]{levine:1995}. Like many
   sets of Parker changes, several different versions exist; the changes here
   represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
   vi chord) instead of \h{FM7} in m.~11; Levine's \emph{Jazz Theory Book} gives
