Stub out chapter 3.

--- a/diss.tex
+++ b/diss.tex
@@ -6,9 +6,11 @@
 % notes files, must go before document begin
 \input{footnotes/ch1-notes}
 \input{footnotes/ch2-notes}
+\input{footnotes/ch3-notes}
 
 % control what we’re compiling
-\includeonly{chapters/ch2}
+\includeonly{chapters/ch3}
+
 
 \begin{document}
 
@@ -17,7 +19,14 @@
 \mainmatter
   \include{chapters/ch1}
   \include{chapters/ch2}
+  \include{chapters/ch3}
 \backmatter
   \include{chapters/back}
 
 \end{document}
+
+
+%%% Local Variables: %%%
+%%% mode: latex %%%
+%%% TeX-master: t %%%
+%%% End: %%%
