Starting to flesh out m3-space.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -1,5 +1,12 @@
 %% Chapter 3 notes
 
+\fntext{mts-1}{%
+  Turning Figure \ref{mts:m3-torus} into a torus involves gluing the
+  top and bottom edges together and the left and right edges together; the
+  dotted line representing perfect fifths then wraps around the surface of the
+  torus in a continuous line (as though you had wrapped a barber's pole into a
+  doughnut).}
+
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
