Un-italicize Tonnetz in ch1 footnote.

--- a/footnotes/ch1-notes.tex
+++ b/footnotes/ch1-notes.tex
@@ -206,7 +206,7 @@
 
 \fntext{tt-4}{%
   Gollin refers to the differences between the two-dimensional triadic
-  \emph{Tonnetz} and his three-dimensional tetrachordal version as
+  Tonnetz and his three-dimensional tetrachordal version as
   “degeneracies” (\headlesscite[200]{gollin:1998}). Child’s cubic
   representation only shows 8 of the possible 24 (0258) tetrachords: those
   related by parsimonious voice leading to a single diminished seventh chord
