Add text on Tonnetz, backdoor transformation.

--- a/diss.bib
+++ b/diss.bib
@@ -164,6 +164,18 @@ Theory} }
   year        = {1996}
 }
 
+@article{cohn:1997,
+  author      = {Cohn, Richard},
+  title       = {Neo-Riemannian Operations, Parsimonious Trichords, and Their
+                \emph{Tonnetz} Representations},
+  journal     = {Journal of Music Theory},
+  volume      = {41},
+  number      = {1},
+  pages       = {1--66},
+  year        = {1997},
+  issue       = {Spring}
+}
+
 @book{cohn:2012,
   author      = {Cohn, Richard},
   title       = {Audacious Euphony},
@@ -816,6 +828,16 @@ Theory} }
   address     = {New York},
   publisher   = {Oxford University Press},
   year        = {2011}
+}
+
+@article{tymoczko:2012,
+  author      = {Tymoczko, Dmitri},
+  title       = {{The Generalized Tonnetz}},
+  journal     = {Journal of Music Theory},
+  volume      = {56},
+  number      = {1},
+  pages       = {1--52},
+  year        = {2012}
 }
 
 @article{waters:2010,
