--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -7,6 +7,24 @@
   torus in a continuous line (as though you had wrapped a barber's pole into a
   doughnut).}
 
+\fntext{mts-2}{%
+  In fact, the graphs of the note-based Tonnetz and the m3-torus here are
+  isomorphic. This fact introduces some tantalizing possibilities, but none turn
+  out to be terribly interesting since, as Richard Cohn has shown, the consonant
+  triad is unique among trichords in its capability for parsimonious voice
+  leading; \headlesscite[1--7]{cohn:1997}. As such, the m3-torus---made of $(026)$
+  trichords---does not show common-tone relations, and the dual graph of the
+  m3-torus gives vertices of set class $(0134678\mathrm{T})$.}
+
+\fntext{mts-3}{%
+  \cite[246--48]{douthettsteinbach:1998}. The chicken-wire torus is the dual
+  graph of the more common note-based Tonnetz; both are shown in
+  \cite[Figure 1]{tymoczko:2012}.}
+
+\fntext{mts-4}{%
+  The definition of \Smin $\xrightarrow{\mathrm{BD}}$ \Sdom is not given, since
+  it is relatively rare in jazz. It models a progression like iv$^7$--\V,
+  which is much more common in classical music.}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
