Add preliminary analysis of "Isotope."

--- a/discog.bib
+++ b/discog.bib
@@ -67,6 +67,17 @@
   userd       = {Fantasy 3-257,}
 }
 
+@music{henderson:isotope,
+  author      = {Henderson, Joe},
+  title       = {Inner Urge},
+  userd       = {Blue Note \abbrev{BLP} 4189,},
+  origdate    = {1965},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{BST} 84189},
+  year        = {1985},
+}
+
 @music{jamal:pershing,
   author      = {Jamal, Ahmad},
   title       = {Jamal at the Pershing, Vol. 2},
