--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -26,6 +26,26 @@
   it is relatively rare in jazz. It models a progression like iv$^7$--\V,
   which is much more common in classical music.}
 
+\fntext{mts-5}{%
+  Keith Waters has called this period ``jazz's second practice'' in
+  \headlesscite{waters:2013}. Waters, along with J.~Kent Williams, has explored
+  jazz harmony after 1960 using the Tonnetz and hyper-hexatonic systems familiar
+  from classical theory; see \headlesscite{waterswilliams:2010}.}
+
+\fntext{mts-6}{%
+  ``Isotope'' was first recorded on Henderson's album \emph{Inner Urge}, released in
+  1965.\nocite{henderson:isotope}}
+
+\fntext{mts-7}{%
+  ``Isotope'' uses a slightly different set of changes for the solos than it
+  does for the head (often referred to simply as the ``solo changes'' and
+  ``head changes''). This is often the case when the head changes are complex,
+  fast-moving, or contain unusual extensions to account for specific melody
+  notes. These changes are taken from \emph{The Real Book}; the C chord in
+  m.~7 is played as either a major or a dominant seventh on the \emph{Inner Urge}
+  recording, so analyzing it as \h{C7} here seems reasonable.}
+
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
