More text on the Isotope analysis.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -45,6 +45,29 @@
   m.~7 is played as either a major or a dominant seventh on the \emph{Inner Urge}
   recording, so analyzing it as \h{C7} here seems reasonable.}
 
+\fntext{mts-8}{%
+  The word ``prolongational'' in this sentence is admittedly problematic. By
+  using it here I mean only that at some deeper level the turnaround is
+  harmonically superfluous, as it occurs after the main tonal conclusion of
+  the chorus (an observation usually confirmed by the fact that the turnaround
+  is omitted in the last head). I do \emph{not} mean to imply that the
+  turnaround in the last two bars of ``Isotope'' is harmonically
+  uninteresting; indeed, it is the most distinctive feature of the piece.}
+
+\fntext{mts-9}{%
+  Exactly how far apart \h{Bb7} and \h{C7} depends on how one chooses to
+  measure voice-leading distance, and whether we consider major-minor sevenths
+  in the usual way, as four-note chords, or in the way we have been doing so
+  here, as ordered triples of root, third, and seventh. In Jack Douthett's
+  Four-Cube trio, for example, \h{Bb7} and \h{C7} are maximally far apart---4
+  semitones; see \cite[157--58]{cohn:2012}.}
+
+\fntext{mts-10}{%
+  The notes in these four dominant sevenths form an octatonic collection, and
+  have been studied fairly extensively in the literature. See, for example,
+  \cite[152--58]{cohn:2012}; \cite[245--46]{douthettsteinbach:1998}; and
+  \cite[371]{tymoczko:2011}.}
+
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
