Very minor edit for Isotope.

--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -77,7 +77,7 @@
     Numbers=OldStyle,
     SmallCapsFeatures={LetterSpace=3.0},
 ]{Source Sans Pro}
-\newfontfamily\ssliningfont[Numbers=Proportional]{Fira Sans}
+\newfontfamily\ssliningfont[Numbers=Proportional]{Source Sans Pro}
 
 \newfontface\abbrevSC[Letters=UppercaseSmallCaps,LetterSpace=5.0]{Junicode}
 
