Finish up "Isotope" analysis/examples.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -68,6 +68,13 @@
   \cite[152--58]{cohn:2012}; \cite[245--46]{douthettsteinbach:1998}; and
   \cite[371]{tymoczko:2011}.}
 
+\fntext{mts-11}{%
+  The most obvious differences in mm.~5--12 of the tune are the ``slash chords''
+  in mm.~8--9. The chord symbol \h{Em7/A} indicates an E minor seventh chord
+  played with an A in the bass; the resulting sound is an \h{A7} chord with a
+  suspended fourth (D replaces C\sharp). The older \emph{Real Book} gives the
+  same change as \h{A7}sus\h{4}. The only other slight alteration is the addition of
+  the ii chord, \h{Dm7}, in m.~10.}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
