Add discography entries from MTSE paper.
These are recordings that will need to make it into the appendix anyway,
but they're here now because they're included in my discography for the
MTSE paper (which is essentially the end of chapter 1). Here's the list
of what's what:

- Autumn Leaves             Ammons/Stitt, Boss Tenors
- Alice in Wonderland       Evans, Sunday at the Village Vanguard
- All the Things You Are    Baker, Cool Baker vol. 2
- How My Heart Sings        Williams, Young at Heart

--- a/discog.bib
+++ b/discog.bib
@@ -1,5 +1,27 @@
 % Discography
 
+@music{ammons:stitt,
+  author      = {Ammons, Gene and Stitt, Sonny},
+  title       = {Boss Tenors},
+  userd       = {Verve \abbrev{V}6 8426,},
+  origdate    = {1961},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Verve},
+  number      = {837 440-2},
+  year        = {1991},
+}
+
+@music{baker:quartet,
+  author      = {Baker, Chet},
+  title       = {Cool Baker, Vol. 2},
+  userd       = {Pacific Jazz \abbrev{K}18\abbrev{P}-9260,},
+  origdate    = {1953},
+  type        = {\abbrev{CD}},
+  series      = {Available on \textit{Chet Baker Quartet Featuring Russ Freeman}. Blue Note},
+  number      = {4931642},
+  year        = {1998},
+}
+
 @music{coleman:amsterdam,
   author      = {Coleman, George},
   title       = {Amsterdam After Dark},
@@ -31,6 +53,18 @@
   number      = {\abbrev{OJCCD} 088-2},
   year        = {1992},
   type        = {\abbrev{CD}}
+}
+
+@music{evans:sunday,
+  author      = {Evans, Bill},
+  title       = {Sunday at the Village Vanguard},
+  userd       = {Riverside \abbrev{RLP} 376,},
+  origdate    = {1961},
+  type        = {\abbrev{CD}},
+  series      = {Available on \textit{The Complete Village Vanguard
+                 Recordings 1961}. Riverside},
+  number      = {4443},
+  year        = {2005},
 }
 
 @music{davis:kindofblue,
@@ -108,4 +142,13 @@
   series      = {Steeplechase},
   number      = {\abbrev{SCCD} 31238},
   year        = {1989},
+}
+
+@music{williams:young,
+  author      = {Williams, Tony},
+  title       = {Young at Heart},
+  type        = {\abbrev{CD}},
+  series      = {Columbia},
+  number      = {69107},
+  year        = {1998},
 }
