Some initial text on Giant Steps, M3 cycles.

--- a/diss.bib
+++ b/diss.bib
@@ -120,6 +120,17 @@ Theory} }
   year        = {2006}
 }
 
+@article{capuzzo:2006,
+  author      = {Capuzzo, Guy},
+  title       = {{Pat Martino's} {The Nature of the Guitar}: An Intersection
+                of Jazz Theory and {Neo-Riemannian} Theory},
+  journal     = {Music Theory Online},
+  volume      = {12},
+  number      = {1},
+  month       = feb,
+  year        = {2006}
+}
+
 @book{carter:2009,
   author      = {Carter, Nathan},
   title       = {Visual Group Theory},
@@ -425,6 +436,14 @@ Theory} }
   year        = {1996}
 }
 
+@phdthesis{julien:2003,
+  author      = {Julien, Patricia},
+  title       = {The Structural Function of Harmonic Relations in Wayne
+                Shorter's Early Compositions: 1959--1963},
+  school      = {University of Maryland},
+  year        = {2003}
+}
+
 @book{kernfeld:2006,
   author      = {Kernfeld, Barry},
   title       = {The Story of Fake Books},
@@ -696,6 +715,16 @@ Theory} }
   note        = {\textit{The Art and Science of Tonal Gravity}}
 }
 
+@unpublished{samarotto:2003,
+  author      = {Samarotto, Frank},
+  title       = {Treading the Limits of Tonal Coherence: Transformation
+                vs.\ Prolongation in Selected Works by Brahms},
+  address     = {Madison, WI},
+  month       = nov,
+  year        = {2003},
+  note        = smt
+}
+
 @book{sanguinetti:2012,
   author      = {Sanguinetti, Giorgio},
   title       = {The Art of Partimento},
@@ -779,6 +808,17 @@ Theory} }
   year        = {1996}
 }
 
+@article{strunk:2005,
+  author      = {Strunk, Steven},
+  title       = {Notes on Harmony in Wayne Shorter's Compositions, 1964--67},
+  journal     = {Journal of Music Theory},
+  volume      = {49},
+  number      = {2},
+  pages       = {301--32},
+  year        = {2005},
+  issue       = {Autumn}
+}
+
 @book{tufte:2001,
   author      = {Tufte, Edward},
   title       = {The Visual Display of Quantitative Information},
@@ -838,6 +878,18 @@ Theory} }
   number      = {1},
   pages       = {1--52},
   year        = {2012}
+}
+
+@article{waters:2005,
+  author      = {Waters, Keith},
+  title       = {Modes, Scales, Functional Harmony, and Nonfunctional Harmony
+                in the Compositions of Herbie Hancock},
+  journal     = {Journal of Music Theory},
+  volume      = {49},
+  number      = {2},
+  pages       = {333--57},
+  year        = {2005},
+  issue       = {Fall}
 }
 
 @article{waters:2010,
