--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -76,6 +76,34 @@
   same change as \h{A7}sus\h{4}. The only other slight alteration is the addition of
   the ii chord, \h{Dm7}, in m.~10.}
 
+
+% Major-third spaces
+\fntext{maj3-1}{%
+  % xxx need these citations
+  The examples are too numerous to list here, but see, for example, [citations
+  go here].}
+
+\fntext{maj3-2}{%
+  Waters's work in particular has focused extensively on this music, though he
+  is hardly alone. See, for example, \cite{julien:2003}; \cite{strunk:2005};
+  \cite{waters:2005}; and \cite{waterswilliams:2010}.}
+
+\fntext{maj3-3}{%
+  Many people have discussed ``Giant Steps'' in the literature; the most
+  substantial work in this area is Matthew Santa’s \headlesscite{santa:2003}.
+  Guy Capuzzo compares Santa’s analysis to one done by Pat Martino in
+  \headlesscite{capuzzo:2006}. See also \cite{demsey:1991}; and
+  \cite{goodheart:2001}.\nocite{coltrane:giantsteps}}
+
+\fntext{maj3-4}{%
+  Frank Samarotto has suggested to me in connection with an unpublished paper
+  of his that ``Giant Steps'' is chromatically coherent, while locally diatonic.
+  As such, it represents an example of his ``hypothetical'' Type 4 coherence,
+  ``in which areas of diatony occur only in local isolation and in which some
+  other (presumably post-tonal) coherence might be in effect.''
+  \headlesscite{samarotto:2003}.}
+
+
 %%% Local Variables: %%%
 %%% mode: latex %%%
 %%% TeX-master: "../diss" %%%
