More explanation on Coltrane changes.

--- a/discog.bib
+++ b/discog.bib
@@ -33,6 +33,39 @@
   year        = {2010},
 }
 
+@music{coltrane:giantsteps,
+  author      = {Coltrane, John},
+  title       = {Giant Steps},
+  userd       = {Atlantic \abbrev{LP} 1311,},
+  origdate    = {1959},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Rhino/Atlantic},
+  number      = {8122752032},
+  year        = {1998},
+}
+
+@music{coltrane:sound,
+  author      = {Coltrane, John},
+  title       = {Coltrane's Sound},
+  userd       = {Atlantic \abbrev{LP} 1419,},
+  origdate    = {1960},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Rhino/Atlantic},
+  number      = {7567813582},
+  year        = {1988},
+}
+
+@music{davis:cookin,
+  author      = {Davis, Miles},
+  title       = {Cookin' with the Miles Davis Quintet},
+  userd       = {Prestige 7094,},
+  origdate    = {1957},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Prestige},
+  number      = {61046},
+  year        = {2003},
+}
+
 @music{evans:heartsings,
   author      = {Evans, Bill},
   title       = {How My Heart Sings!},
