--- a/diss.bib
+++ b/diss.bib
@@ -120,17 +120,6 @@ Theory} }
   year        = {2006}
 }
 
-@article{capuzzo:2006,
-  author      = {Capuzzo, Guy},
-  title       = {{Pat Martino's} {The Nature of the Guitar}: An Intersection
-                of Jazz Theory and {Neo-Riemannian} Theory},
-  journal     = {Music Theory Online},
-  volume      = {12},
-  number      = {1},
-  month       = feb,
-  year        = {2006}
-}
-
 @book{carter:2009,
   author      = {Carter, Nathan},
   title       = {Visual Group Theory},
@@ -251,6 +240,7 @@ Theory} }
 @article{demsey:1991,
   author      = {Demsey, David},
   title       = {Chromatic Third Relations in the Music of John Coltrane},
+  shorttitle  = {Chromatic Third Relations},
   journal     = {Annual Review of Jazz Studies},
   volume      = {5},
   pages       = {145--80},
@@ -667,6 +657,14 @@ Theory} }
   translator  = {Jürgen Krohn and Norman Bowie}
 }
 
+@book{porter:1998,
+  author      = {Porter, Lewis},
+  title       = {John Coltrane: His Life and Music},
+  address     = {Ann Arbor},
+  publisher   = {University of Michigan Press},
+  year        = {1998}
+}
+
 @article{pressing:1978,
   author      = {Pressing, Jeff},
   title       = {Towards an Understanding of Scales in Jazz},
@@ -717,8 +715,8 @@ Theory} }
 
 @unpublished{samarotto:2003,
   author      = {Samarotto, Frank},
-  title       = {Treading the Limits of Tonal Coherence: Transformation
-                vs.\ Prolongation in Selected Works by Brahms},
+  title       = {Treading the Limits of Tonal Coherence: Transformation vs.\
+                Prolongation in Selected Works by Brahms},
   address     = {Madison, WI},
   month       = nov,
   year        = {2003},
