--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -90,8 +90,8 @@
 
 \fntext{maj3-3}{%
   Many people have discussed ``Giant Steps'' in the literature; the most
-  substantial work in this area is Matthew Santa’s \headlesscite{santa:2003}.
-  Guy Capuzzo compares Santa’s analysis to one done by Pat Martino in
+  substantial work in this area is Matthew Santa's \headlesscite{santa:2003}.
+  Guy Capuzzo compares Santa's analysis to one done by Pat Martino in
   \headlesscite{capuzzo:2006}. See also \cite{demsey:1991}; and
   \cite{goodheart:2001}.\nocite{coltrane:giantsteps}}
 
@@ -103,6 +103,39 @@
   other (presumably post-tonal) coherence might be in effect.''
   \headlesscite{samarotto:2003}.}
 
+\fntext{maj3-4b}{%
+  % xxx need this Jaffe page number
+  Authors disagree on whether ``Giant Steps'' is in the key of B or \Eflat:
+  David Demsey hears \Eflat\ (\headlesscite[171--72]{demsey:1991}), while Andy
+  Jaffe hears B \parentext{\headlesscite[]{jaffe:1996}}. Given the organizing influence
+  of the major-third cycle, I am not sure the question is so important; the
+  tune uses tonal progressions, but may not be \emph{in} a key.}
+
+\fntext{maj3-5}{%
+  Exactly how Coltrane devised this substitution set is difficult to say:
+  authors have at various times pointed to classical sources---especially
+  Nicolas Slonimsky's \emph{Thesaurus of Scales and Melodic Patterns}---as
+  well as the music of Thelonious Monk, Dizzy Gillespie, and Tadd Dameron,
+  among others. One source that is nearly always cited is the tune ``Have You
+  Met Miss Jones?'' (Richard Rodgers/Lorenz Hart), in which the bridge traces
+  a descending major-third cycle much like that of ``Giant Steps.'' For a
+  review of these possible origins, see \cite[148--57]{demsey:1991}; and
+  \cite[145--47]{porter:1998}.}
+
+\fntext{maj3-6}{%
+  Nearly every discussion of Coltrane changes includes the
+  ``Countdown''/``Tune Up'' pairing. See, for example,
+  \cite[159--62]{demsey:1991}; \cite[359--60]{levine:1995}; or many others.
+  ``Countdown'' was also recorded on the album \emph{Giant Steps}, and ``Tune
+  Up'' can be heard on \emph{Cookin' with the Miles Davis
+  Quintet} (1957).\nocite{davis:cookin}}
+
+\fntext{maj3-7}{%
+  Demsey provides a list of third-relations in an appendix to
+  \headlesscite[179--80]{demsey:1991}. Coltrane's famous take on ``Body and Soul'' is
+  on the album \emph{Coltrane's Sound} (1960), which also features two original tunes
+  that make prominent use of the major-third cycle: ``Central Park West'' and
+  ``Satellite.''\nocite{coltrane:sound}}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
