Graphics, minor text edits for sect. 3.2.

--- a/discog.bib
+++ b/discog.bib
@@ -177,6 +177,17 @@
   year        = {1989},
 }
 
+@music{shorter:evil,
+  author      = {Shorter, Wayne},
+  title       = {Speak No Evil},
+  userd       = {Blue Note \abbrev{BLP} 4194,},
+  origdate    = {1964},
+  type        = {\abbrev{CD}},
+  series      = {Reissued, Blue Note},
+  number      = {\abbrev{CDP} 7465092},
+  year        = {1987},
+}
+
 @music{williams:young,
   author      = {Williams, Tony},
   title       = {Young at Heart},
