--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -103,6 +103,10 @@
   other (presumably post-tonal) coherence might be in effect.''
   \headlesscite{samarotto:2003}.}
 
+\fntext{maj3-4a}{%
+  These changes are from \cite[30]{levine:piano}. ``Infant Eyes'' appears on
+  Shorter's album \emph{Speak No Evil} (1964).\nocite{shorter:evil}}
+
 \fntext{maj3-4b}{%
   % xxx need this Jaffe page number
   Authors disagree on whether ``Giant Steps'' is in the key of B or \Eflat:
@@ -124,7 +128,7 @@
 
 \fntext{maj3-6}{%
   Nearly every discussion of Coltrane changes includes the
-  ``Countdown''/``Tune Up'' pairing. See, for example,
+  ``Countdown''/\,``Tune Up'' pairing. See, for example,
   \cite[159--62]{demsey:1991}; \cite[359--60]{levine:1995}; or many others.
   ``Countdown'' was also recorded on the album \emph{Giant Steps}, and ``Tune
   Up'' can be heard on \emph{Cookin' with the Miles Davis
