Add text/graphic on Cohn's triadic systems.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -135,11 +135,23 @@
   Quintet} (1957).\nocite{davis:cookin}}
 
 \fntext{maj3-7}{%
-  Demsey provides a list of third-relations in an appendix to
+  Demsey provides a list of third-relations in jazz tunes in an appendix to
   \headlesscite[179--80]{demsey:1991}. Coltrane's famous take on ``Body and Soul'' is
   on the album \emph{Coltrane's Sound} (1960), which also features two original tunes
   that make prominent use of the major-third cycle: ``Central Park West'' and
   ``Satellite.''\nocite{coltrane:sound}}
+
+\fntext{maj3-8}{%
+  \cite{cohn:2012}. Hexatonic cycles are discussed primarily in
+  Cohn's chapter 2, and Weitzmann regions in chapter 4; chapter 5 combines
+  these models into a single system which is then used throughout the rest of
+  the book. Lewis Porter mentions Weitzmann's treatise on the augmented triad
+  as a possible influence on Coltrane \parentext{\headlesscite[146]{porter:1998}}.}
+
+\fntext{maj3-9}{%
+  ``Cube Dance'' appears in \cite[254]{douthettsteinbach:1998}, and is one of
+  Cohn's primary models of triadic space; see \headlesscite[86--109 and
+  following]{cohn:2012}.}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
