Some text on neo-Riemannian seventh-chord stuff.

--- a/footnotes/ch3-notes.tex
+++ b/footnotes/ch3-notes.tex
@@ -142,6 +142,7 @@
   ``Satellite.''\nocite{coltrane:sound}}
 
 \fntext{maj3-8}{%
+  % xxx a sentence here on why we're citing Cohn more than anyone else?
   \cite{cohn:2012}. Hexatonic cycles are discussed primarily in
   Cohn's chapter 2, and Weitzmann regions in chapter 4; chapter 5 combines
   these models into a single system which is then used throughout the rest of
@@ -149,9 +150,31 @@
   as a possible influence on Coltrane \parentext{\headlesscite[146]{porter:1998}}.}
 
 \fntext{maj3-9}{%
-  ``Cube Dance'' appears in \cite[254]{douthettsteinbach:1998}, and is one of
+  In this figure ``$+$'' indicates major triads and ``$-$'' indicates minor
+  triads. ``Cube Dance'' appears in \cite[254]{douthettsteinbach:1998}, and is one of
   Cohn's primary models of triadic space; see \headlesscite[86--109 and
   following]{cohn:2012}.}
+
+\fntext{maj3-10}{%
+  ``4-Cube Trio'' was originally devised by Jack Douthett, and is very similar
+  to the ``Power Towers'' graphic in \cite[256]{douthettsteinbach:1998} (which
+  omits the French sixth chords). For more on its history, see
+  \cite[157n15]{cohn:2012}.}
+
+\fntext{maj3-11}{%
+  This is a central thesis of Cohn's chapter 7 \parentext{see especially
+  \citetitle[148--58]{cohn:2012}}, and figures prominently in Tymoczko's
+  geometric theory \parentext{\headlesscite[97--112]{tymoczko:2011}}.}
+
+\fntext{maj3-12}{%
+  My intent here is not to fault these approaches for failing to explain jazz
+  harmony, only to demonstrate why they are not sufficient for our purposes
+  here. These theories were designed primarily for music of the nineteenth
+  century, in which triadic music is the rule and seventh chords the exception.
+  In this goal, they generally succeed: many of the unusual harmonic techniques
+  in that repertoire \emph{are} well explained by parsimonious voice-leading.
+  Jazz, as a music driven by seventh chords, is a fundamentally different
+  animal, and requires a different approach.}
 
 %%% Local Variables: %%%
 %%% mode: latex %%%
